--- a/nautilus-ionic/src/app/views/requests/requests.page.html
+++ b/nautilus-ionic/src/app/views/requests/requests.page.html
@@ -17,4 +17,6 @@
                             (addRequestEvent)="addRequest($event)"></app-inventory-requests>
   </div>
 
+  <app-notification-banner></app-notification-banner>
+
 </ion-content>
